--- a/publications.html
+++ b/publications.html
@@ -56,6 +56,10 @@
 											<td>2024</td>      
 												<td><strong>Budke JM.</strong> Illuminating the role of the calyptra in sporophyte development. <i>Current Opinion in Plant Biology</i> 81:102565.<a href="https://doi.org/10.1016/j.pbi.2024.102565" target="_blank"> doi.org/10.1016/j.pbi.2024.102565</a> - <a href="publicationsPDF/Budke2024.pdf" target="_blank"> PDF</a></td>
 											</tr>
+											 <tr>
+											<td>2024</td>      
+												<td>Ellis LT, Adjie B., Alvarez DJ, Ardiles V, Asthana AK, Atwood JJ, Bakalin VA, Bednarek-Ochyra H, Boiko M, <strong>Budke JM</strong>, Cedrés-Perdomo RD, Cerrato MD, Csiky J, Espinoza-Prieto B, Gabriel R, Gey S, Gil L, Graulich, Hylander K, Kiebacher, Konstantinova NA, Kučera J, Kunev G, Larraín J, Lönnell N, Maciel-Silva AS, Mamontov YuS, Mattos GHR, Mir-Rosselló PM, Nadhifah A**, Natcheva R, O’Leary SV, Oliveira MF, Opisso J, Papp B, Peñaloza-Bojacá GF, Polaino-Martín C, Rawat KK, Ribas-Serra A, Rosadziński S, Sahu V, Sipos A, Staniaszek-Kik M, Starzomski BM, Suárez GM, Tucker DBL, Verma A, Zagorodniuk N. New national and regional bryophyte records. <i>Journal of Bryology</i> 77:1–17. (**graduate student collaborator)<a href="https://doi.org/10.1080/03736687.2024.2388418" target="_blank"> doi.org/10.1080/03736687.2024.2388418</a> - <a href="publicationsPDF/EllisEtAl_2024_JofB.pdf" target="_blank"> PDF</a></td>
+											</tr>
 										  <tr>
 											<td>2023</td>      
 												<td>Faidiga A**, Oliver MG, <strong>Budke JM,</strong> Kalisz S. Shifts in flowering phenology in response to spring temperatures in eastern Tennessee.   <i>American Journal of Botany</i> 110: e16203. (**graduate student collaborator)<a href="https://doi.org/10.1002/ajb2.16203" target="_blank"> doi.org/10.1002/ajb2.16203</a> - <a href="publicationsPDF/FaidigaEtAl_2023_AJB.pdf" target="_blank"> PDF</a></td>
