--- a/research.html
+++ b/research.html
@@ -163,9 +163,12 @@
 									<h4>Relevant publications:</h4><div class="table-wrapper">
 									<table>
 										<tbody>
-											<td>2023</td>      
-												<td>Faidiga A**, Oliver MG, <strong>Budke JM,</strong> Kalisz S. Shifts in flowering phenology in response to spring temperatures in eastern Tennessee.   <i>American Journal of Botany</i> 110: e16203. (**graduate student collaborator)<a href="https://doi.org/10.1002/ajb2.16203" target="_blank"> doi.org/10.1002/ajb2.16203</a> - <a href="publicationsPDF/FaidigaEtAl_2023_AJB.pdf" target="_blank"> PDF</a></td>
+											<td>2024</td>      
+												<td>Ellis LT, Adjie B., Alvarez DJ, Ardiles V, Asthana AK, Atwood JJ, Bakalin VA, Bednarek-Ochyra H, Boiko M, <strong>Budke JM</strong>, Cedrés-Perdomo RD, Cerrato MD, Csiky J, Espinoza-Prieto B, Gabriel R, Gey S, Gil L, Graulich, Hylander K, Kiebacher, Konstantinova NA, Kučera J, Kunev G, Larraín J, Lönnell N, Maciel-Silva AS, Mamontov YuS, Mattos GHR, Mir-Rosselló PM, Nadhifah A**, Natcheva R, O’Leary SV, Oliveira MF, Opisso J, Papp B, Peñaloza-Bojacá GF, Polaino-Martín C, Rawat KK, Ribas-Serra A, Rosadziński S, Sahu V, Sipos A, Staniaszek-Kik M, Starzomski BM, Suárez GM, Tucker DB , Verma A, Zagorodniuk N. New national and regional bryophyte records. <i>Journal of Bryology</i> 77:1–17. (**graduate student collaborator)<a href="https://doi.org/10.1080/03736687.2024.2388418" target="_blank"> doi.org/10.1080/03736687.2024.2388418</a> - <a href="publicationsPDF/EllisEtAl_2024_JofB.pdf" target="_blank"> PDF</a></td>
 											</tr>	
+											<td>2023</td>      
+												<td>Faidiga A**, Oliver MG, <strong>Budke JM,</strong> Kalisz S. Shifts in flowering phenology in response to spring temperatures in eastern Tennessee. <i>American Journal of Botany</i> 110: e16203. (**graduate student collaborator)<a href="https://doi.org/10.1002/ajb2.16203" target="_blank"> doi.org/10.1002/ajb2.16203</a> - <a href="publicationsPDF/FaidigaEtAl_2023_AJB.pdf" target="_blank"> PDF</a></td>
+											</tr>
 											<td>2022</td>      
 												<td>Lewis RA, <strong>Budke JM.</strong> Bryophyte specimen organization and storage systems: A comparative assessment of staff practices and user preferences. <i>The Bryologist</i> 125: 222-247.<a href="https://doi.org/10.1639/0007-2745-125.2.222" target="_blank"> doi.org/10.1639/0007-2745-125.2.222 - <a href="publicationsPDF/Lewis&Budke2022.pdf" target="_blank"> PDF</a></td>
 											</tr>			
