--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 							</ul>
 							
 								  <h3> Interested in joining the lab? <br /> 
-									  We are activiely recruiting UTK undergraduate students to join the lab to work on research projects focusing on moss parent-offspring conflict. This includes the potential for skill bulding in histology, morphological data collection, molecular systematics, and fieldwork. We are also recruiting graduate students for the December 2024 application deadline. If our lab seems like it might be a good fit for you, please send an email expressing your interest with your CV/resume and unofficial transcripts attached to Dr. Jessica Budke <a title="mailto:jbudke@utk.edu" href="mailto:jbudke@utk.edu">jbudke@utk.edu</a> <br />
+									  We are actively recruiting UTK undergraduate students to join the lab to work on research projects focusing on moss parent-offspring conflict. This includes the potential for skill building in histology, morphological data collection, molecular systematics, and fieldwork. We are also recruiting graduate students for the December 2024 application deadline. If our lab seems like it might be a good fit for you, please send an email expressing your interest with your CV/resume and unofficial transcripts attached to Dr. Jessica Budke <a title="mailto:jbudke@utk.edu" href="mailto:jbudke@utk.edu">jbudke@utk.edu</a> <br />
 							  
 						</footer>
 					</div>
