--- a/outreach.html
+++ b/outreach.html
@@ -48,9 +48,9 @@
 									<!-- content -->
 								  <div class="col-8 col-8-narrow col-12-mobilep">
 										<a name="outdoorbotanypresentations"></a>
-									<a href="https://classroom.google.com/u/1/c/NjUwMTU0ODUzNjM1"><h3><i>What The Moss Field Guide</i> - Google Classroom</h3></a>
-									  <p><strong><a href="https://classroom.google.com/u/1/c/NjUwMTU0ODUzNjM1">CLICK HERE for the digital version of our <i>What The Moss Field Guide</i> and more fun activities available in our Google Classroom!</a></strong></p>
-									  <p><strong><a href="https://forms.gle/q1H1znCEN5naKUM26">CLICK HERE to give feedback on our <i>What The Moss Exploration Pack &amp;&nbsp;Field Guide.</i> </a></strong></p>
+									<a href="https://classroom.google.com/c/NjUwMTU0ODUzNjM1?cjc=ydswmbk"><h3><i>What The Moss Field Guide</i> - Google Classroom</h3></a>
+									  <p><strong><a href="https://classroom.google.com/c/NjUwMTU0ODUzNjM1?cjc=ydswmbk">CLICK HERE for our <i>What The Moss Field Guide</i> and more fun activities available in our Google Classroom!</a></strong></p>
+									  <p><strong><a href="https://forms.gle/q1H1znCEN5naKUM26">CLICK HERE <u>to give feedback</u> on our <i>What The Moss Exploration Pack &amp;&nbsp;Field Guide.</i> </a></strong></p>
 									  <p>This project was carried out in collaboration with <a href="https://www.easyasplay.org/meet-our-team">Easy As Plays's </a>Creative Director, Kashina Hickson. Special thanks to University of Tennessee undergraduate students Zoey Best, Noah Webb, and Blakeney Jordan for their great work helping to create and edit this field guide.</p>
 									</div>
 									<!-- image -->
