--- a/outreach.html
+++ b/outreach.html
@@ -51,7 +51,7 @@
 									<a href="https://classroom.google.com/c/NjUwMTU0ODUzNjM1?cjc=ydswmbk"><h3><i>What The Moss Field Guide</i> - Google Classroom</h3></a>
 									  <p><strong><a href="https://classroom.google.com/c/NjUwMTU0ODUzNjM1?cjc=ydswmbk">CLICK HERE for our <i>What The Moss Field Guide</i> and more fun activities available in our Google Classroom!</a></strong></p>
 									  <p><strong><a href="https://forms.gle/q1H1znCEN5naKUM26">CLICK HERE <u>to give feedback</u> on our <i>What The Moss Exploration Pack &amp;&nbsp;Field Guide.</i> </a></strong></p>
-									  <p>This project was carried out in collaboration with <a href="https://www.easyasplay.org/meet-our-team">Easy As Plays's </a>Creative Director, Kashina Hickson. Special thanks to University of Tennessee undergraduate students Zoey Best, Noah Webb, and Blakeney Jordan for their great work helping to create and edit this field guide.</p>
+									  <p>This project was carried out in collaboration with <a href="https://www.easyasplay.org/meet-our-team">Easy As Plays's </a>Creative Director, Kashina Hickson. Special thanks to University of Tennessee undergraduate students Zoey Best, Noah Webb, and Blakeney Jordan for their great work helping to create and edit this field guide!</p>
 									</div>
 									<!-- image -->
 									<div class="col-4 col-4-narrow col-12-mobilep">
@@ -206,7 +206,7 @@
 								</div>
 							</div>
 					<div class="copyright">
-				    &copy; Copyright 2024 JM Budke All rights reserved.</div>
+				    &copy; Copyright 2025 JM Budke All rights reserved.</div>
 				</footer>
 
 		</div>
