--- a/publications.html
+++ b/publications.html
@@ -48,9 +48,13 @@
 									<a name="peerreviewed"></a><div class="table-wrapper">
 									<table>
 										<tbody>
+																						 <tr>
+											<td>2024</td>      
+												<td>Okafor AN*, <strong>Budke JM. </strong>Mosses with shorter sporophytes allocate more conducting cell area to leptoids. <i>Evansia</i> 41: 67–71. (*undergraduate student collaborator; Featured on the cover: Volume 41, Issue 3)<a href="https://doi.org/10.1639/0747-9859-41.3.67" target="_blank"> doi.org/10.1639/0747-9859-41.3.67</a> - <a href="publicationsPDF/Okafor&Budke2024.PDF" target="_blank"> PDF</a></td>
+											</tr>
 																					  <tr>
 											<td>2024</td>      
-												<td><strong>Budke JM.</strong> Illuminating the role of the calyptra in sporophyte development. <i>Current Opinion in Plant Biology</i> 81:102565.<a href="https://doi.org/10.1016/j.pbi.2024.102565" target="_blank"> doi.org/10.1016/j.pbi.2024.102565</a> - <a href="publicationsPDF/Budke2024.pdf" target="_blank"> PDF</a></td>
+												<td><strong>Budke JM.</strong> Illuminating the role of the calyptra in sporophyte development. <i>Current Opinion in Plant Biology</i> 81: 102565.<a href="https://doi.org/10.1016/j.pbi.2024.102565" target="_blank"> doi.org/10.1016/j.pbi.2024.102565</a> - <a href="publicationsPDF/Budke2024.pdf" target="_blank"> PDF</a></td>
 											</tr>
 										<tr>
 											<td>2024</td>      
@@ -58,7 +62,11 @@
 											</tr>
 											 <tr>
 											<td>2024</td>      
-												<td>Ellis LT, Adjie B., Alvarez DJ, Ardiles V, Asthana AK, Atwood JJ, Bakalin VA, Bednarek-Ochyra H, Boiko M, <strong>Budke JM</strong>, Cedrés-Perdomo RD, Cerrato MD, Csiky J, Espinoza-Prieto B, Gabriel R, Gey S, Gil L, Graulich, Hylander K, Kiebacher, Konstantinova NA, Kučera J, Kunev G, Larraín J, Lönnell N, Maciel-Silva AS, Mamontov YuS, Mattos GHR, Mir-Rosselló PM, Nadhifah A**, Natcheva R, O’Leary SV, Oliveira MF, Opisso J, Papp B, Peñaloza-Bojacá GF, Polaino-Martín C, Rawat KK, Ribas-Serra A, Rosadziński S, Sahu V, Sipos A, Staniaszek-Kik M, Starzomski BM, Suárez GM, Tucker DBL, Verma A, Zagorodniuk N. New national and regional bryophyte records. <i>Journal of Bryology</i> 77:1–17. (**graduate student collaborator)<a href="https://doi.org/10.1080/03736687.2024.2388418" target="_blank"> doi.org/10.1080/03736687.2024.2388418</a> - <a href="publicationsPDF/EllisEtAl_2024_JofB.pdf" target="_blank"> PDF</a></td>
+												<td>von Konrat M, Rodriguez Y,  Bailey C, Gwilliam III GF, Christian C, Aguero B, Ahn J, Albion Z,  Allen JR, Bailey C, Blake E, Blake W, Blake G, Briscoe L, <strong>Budke JM</strong>, Campbell T, Chansler T, Clark D, Delapena R, Denslow M, Ellis S, Ellwood E, Ens B, Evans NM, Fabian A, Gaswick W, Golembiewski K, Grant S, Hansen K, Janney B, Janeen Jones, Kachian Z,  Kawasaki L, Leek O, Kellum K, Maier C, Mast A, Martinec JL, Mayer P, Mladek M, Nadhifah A, Neefus C, Nodulman M, Oliver M, Overberg K, Peterson AT, Qazi-Lampert A, Rothfels C,  Salm R, Schreiner D, Schreiner M, Tepe EJ, Turcatel M, Vega A, Wade H, Weinand D, Webbink K, Widhelm T, Zwingelberg M. From Spectators to Stewards: Transforming Public Involvement in Natural History Collections. <i>Natural History Collections and Museomics</i> 1: 1–33. <a href="https://doi.org/10.3897/nhcm.1.138247" target="_blank"> doi.org/10.3897/nhcm.1.138247</a> - <a href="publicationsPDF/vonKonratEtAl_2024_NHC&M.pdf" target="_blank"> PDF</a></td>
+											</tr>
+																						 <tr>
+											<td>2024</td>      
+												<td>Ellis LT, Adjie B., Alvarez DJ, Ardiles V, Asthana AK, Atwood JJ, Bakalin VA, Bednarek-Ochyra H, Boiko M, <strong>Budke JM</strong>, Cedrés-Perdomo RD, Cerrato MD, Csiky J, Espinoza-Prieto B, Gabriel R, Gey S, Gil L, Graulich, Hylander K, Kiebacher, Konstantinova NA, Kučera J, Kunev G, Larraín J, Lönnell N, Maciel-Silva AS, Mamontov YuS, Mattos GHR, Mir-Rosselló PM, Nadhifah A**, Natcheva R, O’Leary SV, Oliveira MF, Opisso J, Papp B, Peñaloza-Bojacá GF, Polaino-Martín C, Rawat KK, Ribas-Serra A, Rosadziński S, Sahu V, Sipos A, Staniaszek-Kik M, Starzomski BM, Suárez GM, Tucker DBL, Verma A, Zagorodniuk N. New national and regional bryophyte records.  <i>Journal of Bryology</i> 77: 1–17. (**graduate student collaborator)<a href="https://doi.org/10.1080/03736687.2024.2388418" target="_blank"> doi.org/10.1080/03736687.2024.2388418</a> - <a href="publicationsPDF/EllisEtAl_2024_JofB.pdf" target="_blank"> PDF</a></td>
 											</tr>
 										  <tr>
 											<td>2023</td>      
@@ -260,7 +268,7 @@
 					  </div>
 	  </div>
 					<div class="copyright">
-				    &copy; Copyright 2024 JM Budke All rights reserved.</div>
+				    &copy; Copyright 2025 JM Budke All rights reserved.</div>
 	</footer>
 
 		</div>
