--- a/teaching.html
+++ b/teaching.html
@@ -51,9 +51,10 @@
 								  <li>EEB 330/602 - Field Botany - Fall semesters<br />
 									  Three credit course<br />
 									  Principles of taxonomy, basic ecological concepts and identification, recognition, collection and preservation of local, native and naturalized plants. Plants are foundational for life on our planet, from the air we breathe to the food we eat. Being able to identify plant species is a critical skill that will enable you to: assess ecosystem health and habitat type, recognize edible or medicinal plants, spot new plant species invading our native communities that if left unchecked may upset critical ecosystem services that we depend upon, discover new plant species that could yield chemicals with novel pharmaceutical properties, recognize crop pests that can negatively impact our food security, and generally enhance your understanding and appreciation of green spaces. In this course students will explore diverse plants of east Tennessee in the field, using a hand lens, and through photographs, readings, videos, and lectures provided online. Students will learn to sight identify common plants, and how to use field guides and dichotomous keys to identify unknown plants. Students will virtually tour research facilities on campus, such as the UTK Herbarium, that are dedicated to the conservation, identification, and preservation of plants. As a team, students will use their knowledge gained during the course to create a field guide educating members of the public about plants and teaching them to distinguish common plant species.</li><br />
-								<li>EEB 401/607 - Natural History Collections Research Seminar - Fall semesters<br />
-									One credit (7-week) course<br />
-									Natural history collections are a physical record of our planet's biology across space and time, and are a critical part of modern biodiversity research. This course will introduce students to cutting edge collections-based research. We will explore critical questions in conservation management, invasive species biology, anthropology, paleontology, ecology, evolution, scientific ethics, and advocacy that are informed by data from natural history collections. During this course, students will visit a variety of research and teaching collections on campus, including (but not limited to) the ichthyology, malacology, botanical, and fungal collections. Students will gain hands on experience with research specimens and the metadata associated with them. We will have presentations from guest instructors (e.g., collections managers, curators, directors, faculty) who work with natural history collections sharing their approaches to curating collections as well as their integration of specimens into their ongoing research projects.</li>
+							      <li>EEB 401/607 - Natural History Collections Research Seminar - Fall semesters<br>
+								        One credit (7-week) course<br>
+								        Natural history collections are a physical record of our planet's biology across space and time, and are a critical part of modern biodiversity research. This course will introduce students to cutting edge collections-based research. We will explore critical questions in conservation management, invasive species biology, anthropology, paleontology, ecology, evolution, scientific ethics, and advocacy that are informed by data from natural history collections. During this course, students will visit a variety of research and teaching collections on campus, including (but not limited to) the ichthyology, malacology, botanical, and fungal collections. Students will gain hands on experience with research specimens and the metadata associated with them. We will have presentations from guest instructors (e.g., collections managers, curators, directors, faculty) who work with natural history collections sharing their approaches to curating collections as well as their integration of specimens into their ongoing research projects.</li><br />
+								      <li>EEB 466 - Immersion in Natural History Collections Research - May miniterm<br /> Three credit (2-3 week) course.<br /> In this course students will gain skills in plant identification, DNA sequence data generation, herbarium specimen collection, and morphological evolution. The skills students gain will enhance their ability to succeed in scientific research careers, such as field biology, natural history collections, and molecular biology. Scholarships ($900) are available for students help offset the registration costs for this 3-credit, on campus, in-person course (May 16-30, 2025). For more information, to reserve your spot in this course, and apply for the scholarship, please email Dr. Jessica Budke <a title="mailto:jbudke@utk.edu" href="mailto:jbudke@utk.edu">jbudke@utk.edu</a></li>
                                 </ul>
 								</p>
 						</section>
@@ -97,7 +98,7 @@
 								</div>
 									</div>
 								</div>
-					  </section>
+    </section>
 						<!-- Moss Culturing Protocol for Growing Mosses in the Classroom -->
 							<section>
 								<div class="row">
@@ -118,7 +119,7 @@
 									</div>
 								</div>
 							</section>	
-					</div>
+				  </div>
 				</section>
 		</div>
 			
@@ -180,7 +181,7 @@
 								</div>
 							</div>
 					<div class="copyright">
-				    &copy; Copyright 2024 JM Budke All rights reserved.</div>
+				    &copy; Copyright 2025 JM Budke All rights reserved.</div>
 				</footer>
 
 		<!-- Scripts -->
