--- a/labmembers.html
+++ b/labmembers.html
@@ -56,7 +56,7 @@
 								    <span class="icon solid fa-envelope"><span class="label">Email</span></span> 
 											&nbsp; <a href="mailto:jbudke@utk.edu">jbudke@utk.edu</a><br />
 									<a href="https://scholar.google.com/citations?hl=en&user=CJ6j1Y0AAAAJ&view_op=list_works&gmla=AJsN-F764UKF9tsLgJVXe7E9gbAX_UcBC15kEFklgE14D4lMlJCZQjBMespd37oBvUc4YeINrT_Li9tsAEHfRmb4PtzOr5SmgQ" target="_blank">Google Scholar Page</a><br />
-									<a href="people_files/Budke_CV80.pdf" target="_blank">Current CV</a>
+									<a href="people_files/Budke_CV80b.pdf" target="_blank">Current CV</a>
 							  </ul></p>
 								<br />
 
@@ -64,7 +64,7 @@
 			<!-- Interest in the lab -->
 							<section>
 								  <h3> <center>Interested in joining the lab? <br /> 
-									  We are activiely recruiting UTK undergraduate students to join the lab to work on research projects focusing on moss parent-offspring conflict. This includes the potential for skill bulding in histology, morphological data collection, molecular systematics, and fieldwork. We are also recruiting graduate students for the December 2024 application deadline. If our lab seems like it might be a good fit for you, please send an email expressing your interest with your CV/resume and unofficial transcripts attached to Dr. Jessica Budke <a title="mailto:jbudke@utk.edu" href="mailto:jbudke@utk.edu">jbudke@utk.edu</a> 
+									  We are activiely recruiting UTK undergraduate students to join the lab to work on research projects focusing on moss parent-offspring conflict. This includes the potential for skill bulding in histology, morphological data collection, molecular systematics, and fieldwork. If our lab seems like it might be a good fit for you, please send an email expressing your interest with your CV/resume and unofficial transcripts attached to Dr. Jessica Budke <a title="mailto:jbudke@utk.edu" href="mailto:jbudke@utk.edu">jbudke@utk.edu</a> 
 									  <br /> 
 									  </section>
 									  <section>
@@ -159,16 +159,7 @@
 								  &nbsp; &nbsp;113 Temple Hall<br /></p>
 								</div>
 	
-																	<div class="col-3 col-6-narrow col-12-mobilep">
-										<a href="#" class="image fit"><img src="images/Julian.jpg" alt="" /></a>
-										<p><strong>Julian Broughton<br />Computational Assistant</strong><br /> 
-											Feb 2024 – Present<br /><strong>Undergraduate Researcher</strong><br /> 
-											Sept 2020 – Aug 2023</p>
-										<p>B.S. in Biological Sciences, concentration BCMB, <a href="https://eeb.utk.edu/" target="_blank">Univ. of Tennessee</a>, 2023 </p>
-																		<p>
-										Subsequently – Ph.D. Student at <a href="https://home.mmc.edu/" target="_blank">Meharry Medical College </a></p>
-									<p>
-									</div>
+
 								<div class="col-3 col-6-narrow col-12-mobilep">
 										<a href="#" class="image fit"><img src="images/Amy.jpg" alt="" /></a>
 										<p><strong>Amy Okafor<br />Research Assistant</strong><br /> 
@@ -184,13 +175,7 @@
 									<p>
 									  Major –&nbsp;Biological Sciences, concentration BCMB</p>
 								</div>
-								<div class="col-3 col-6-narrow col-12-mobilep">
-										<a href="#" class="image fit"><img src="images/Lily_Lab_picture2.jpg" alt="" /></a>
-										<p><strong>Lily Cooper<br />Undergraduate Researcher</strong><br /> 
-											Oct 2023 – Present</p>
-									<p>
-									  Major –&nbsp;Plant Sciences</p>
-								</div>
+
 									<div class="col-3 col-6-narrow col-12-mobilep">
 										<a href="#" class="image fit"><img src="images/Aspen_Lab_picture2.jpg" alt="" /></a>
 										<p><strong>Aspen Mazzatta<br />Undergraduate Researcher</strong><br /> 
@@ -218,7 +203,13 @@
 									<h2>Previous Lab Members</h2>
 								</header>
 								<div class="row">
-
+								<div class="col-3 col-6-narrow col-12-mobilep">
+										<a href="#" class="image fit"><img src="images/Lily_Lab_picture2.jpg" alt="" /></a>
+										<p><strong>Lily Cooper<br />Undergraduate Researcher</strong><br /> 
+											Oct 2023 – Dec 2024</p>
+									<p>
+									  Major –&nbsp;Plant Sciences</p>
+								</div>
 									<div class="col-3 col-6-narrow col-12-mobilep">
 										<a href="#" class="image fit"><img src="images/Blakeney_lab_picture2.jpg" alt="" /></a>
 									<p><strong>Blakeney Jordan<br>
@@ -248,6 +239,16 @@
 									<p>
 									
 								</div>
+								<div class="col-3 col-6-narrow col-12-mobilep">
+										<a href="#" class="image fit"><img src="images/Julian.jpg" alt="" /></a>
+										<p><strong>Julian Broughton<br />Computational Assistant</strong><br /> 
+											Feb – May 2024<br /><strong>Undergraduate Researcher</strong><br /> 
+											Sept 2020 – Aug 2023</p>
+										<p>B.S. in Biological Sciences, concentration BCMB, <a href="https://eeb.utk.edu/" target="_blank">Univ. of Tennessee</a>, 2023 </p>
+																		<p>
+										Subsequently – Ph.D. Student at <a href="https://home.mmc.edu/" target="_blank">Meharry Medical College </a></p>
+									<p>
+									</div>
 									<div class="col-3 col-6-narrow col-12-mobilep">
 										<a href="#" class="image fit"><img src="images/Liz_Lab_picture2.jpg" alt="" /></a>
 								  <p><strong>Liz Halasz<br />
@@ -440,7 +441,7 @@ B.S., <a href="https://www.stcloudstate.edu/" target="_blank">St. Cloud State Un
 					  </div>
 	</div>
 					<div class="copyright">
-				    &copy; Copyright 2024 JM Budke All rights reserved.</div>
+				    &copy; Copyright 2025 JM Budke All rights reserved.</div>
 		  </footer>
 
 		</div>
