one more update

--- a/publications.html
+++ b/publications.html
@@ -54,7 +54,7 @@
 											</tr>
 																						 <tr>
 											<td>2024</td>      
-												<td>Okafor AN, Budke JM. <strong>Mosses with shorter sporophytes allocate more conducting cell area to leptoids.</strong> <i>Evansia</i> 41: 67–71. (Featured on the cover: Volume 41, Issue 3)<a href="https://doi.org/10.1639/0747-9859-41.3.67" target="_blank"> doi.org/10.1639/0747-9859-41.3.67</a> - <a href="publicationsPDF/Okafor&Budke_2024.PDF" target="_blank"> PDF</a></td>
+												<td>Okafor AN, Budke JM. <strong>Mosses with shorter sporophytes allocate more conducting cell area to leptoids.</strong> <i>Evansia</i> 41: 67–71. (Featured on the cover: Volume 41, Issue 3)<a href="https://doi.org/10.1639/0747-9859-41.3.67" target="_blank"> doi.org/10.1639/0747-9859-41.3.67</a> - <a href="publicationsPDF/Okafor&Budke__2024.PDF" target="_blank"> PDF</a></td>
 											</tr>
 																					  <tr>
 											<td>2024</td>      
