--- a/research.html
+++ b/research.html
@@ -63,7 +63,7 @@
 									<table>
 										<tbody>
 											<td>2024</td>      
-												<td>Okafor AN, Budke JM. <strong>Mosses with shorter sporophytes allocate more conducting cell area to leptoids.</strong> <i>Evansia</i> 41: 67–71. (Featured on the cover: Volume 41, Issue 3)<a href="https://doi.org/10.1639/0747-9859-41.3.67" target="_blank"> doi.org/10.1639/0747-9859-41.3.67</a> - <a href="publicationsPDF/Okafor&Budke_2024.PDF" target="_blank"> PDF</a></td>
+												<td>Okafor AN, Budke JM. <strong>Mosses with shorter sporophytes allocate more conducting cell area to leptoids.</strong> <i>Evansia</i> 41: 67–71. (Featured on the cover: Volume 41, Issue 3)<a href="https://doi.org/10.1639/0747-9859-41.3.67" target="_blank"> doi.org/10.1639/0747-9859-41.3.67</a> - <a href="publicationsPDF/Okafor&Budke__2024.PDF" target="_blank"> PDF</a></td>
 											</tr>
 											<td>2024</td>      
 												<td>Budke JM. <strong>Illuminating the role of the calyptra in sporophyte development.</strong> <i>Current Opinion in Plant Biology</i> 81:102565.<a href="https://doi.org/10.1016/j.pbi.2024.102565" target="_blank"> doi.org/10.1016/j.pbi.2024.102565</a> - <a href="publicationsPDF/Budke2024.pdf" target="_blank"> PDF</a></td>
